[gd_scene load_steps=17 format=3 uid="uid://dcl1depkxyj8j"]

[ext_resource type="Script" path="res://Items/Weapons/Utility/Flare/Flare.gd" id="1_aoomu"]
[ext_resource type="Texture2D" uid="uid://cekgncgf3ua1x" path="res://Items/Weapons/Utility/Flare/Flare.png" id="2_sjs8d"]
[ext_resource type="Texture2D" uid="uid://doo3nmswa6wd" path="res://Graphics/Particles/spotlight_1.png" id="3_r2alx"]
[ext_resource type="Texture2D" uid="uid://76l3wdwnkmge" path="res://Graphics/Particles/spotlight_8.png" id="4_mepvj"]
[ext_resource type="Texture2D" uid="uid://bu4bbi76w1nsa" path="res://Graphics/Particles/smoke01.png" id="5_k7hp4"]
[ext_resource type="AudioStream" uid="uid://dnu168bhp37og" path="res://Sounds/FizzleOutQuick.ogg" id="6_6fyix"]
[ext_resource type="AudioStream" uid="uid://fi1mmfb5vh1" path="res://Sounds/FizzleOutQuickLastGasp.ogg" id="7_ybtxn"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_pk2bb"]
bounce = 0.25

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b53rh"]
size = Vector2(18, 6)

[sub_resource type="Gradient" id="Gradient_4x0bo"]
offsets = PackedFloat32Array(0.00696864, 0.142857, 0.969811, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.352941, 0, 0, 0, 0.030303, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hiuic"]
gradient = SubResource("Gradient_4x0bo")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2bbo8"]
particle_flag_rotate_y = true
particle_flag_disable_z = true
direction = Vector3(1, 1, 0)
spread = 80.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 50.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
angle_min = -100.0
angle_max = 100.0
scale_min = 0.02
scale_max = 0.06
color_ramp = SubResource("GradientTexture1D_hiuic")

[sub_resource type="Animation" id="Animation_jq0jy"]
resource_name = "LensFlareFlicker"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LensFlareSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_85itc"]
resource_name = "fizzle_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.00357813, 0.8, 0.9, 0.987565),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [8.0, 0.5, 6.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LensFlareSprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.840861, 0.914213, 0.985776),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.392157, 0.392157, 1), Color(1, 0.392157, 0.392157, 0.12549), Color(1, 0.392157, 0.392157, 0.627451), Color(1, 0.384314, 0.384314, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0053672, 0.985776),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.352941, 0.352941, 0.352941, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BlackSmogSprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.00715627, 0.985776),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_6fyix")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_ybtxn")
}],
"times": PackedFloat32Array(0, 0.85)
}
tracks/4/use_blend = true

[sub_resource type="Animation" id="Animation_vsnr3"]
resource_name = "light_flicker"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("PointLight2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 0, 0, 0.784314), Color(1, 0, 0, 0.705882)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0532965, 0.110359, 0.165445, 0.218929, 0.275804, 0.338045, 0.388227, 0.447267, 0.486626),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [5.0, 2.5, 1.5, 3.0, 0.75, 0.9, 3.0, 0.803293, 0.3, 1.6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LensFlareSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.00357813, 0.112711, 0.227211, 0.393595, 0.425798, 0.488415),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.392157, 0.392157, 1), Color(1, 0, 0, 1), Color(1, 0.490196, 0.490196, 1), Color(1, 0.235294, 0.235294, 1), Color(1, 0.168627, 0.168627, 0.352941), Color(1, 0.361101, 0.361101, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qeov5"]
_data = {
"LensFlareFlicker": SubResource("Animation_jq0jy"),
"fizzle_out": SubResource("Animation_85itc"),
"light_flicker": SubResource("Animation_vsnr3")
}

[node name="Flare" type="RigidBody2D"]
collision_layer = 0
collision_mask = 15
mass = 0.25
physics_material_override = SubResource("PhysicsMaterial_pk2bb")
can_sleep = false
linear_damp = 2.1
angular_damp = 0.6
script = ExtResource("1_aoomu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_sjs8d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_b53rh")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(9, 0)
scale = Vector2(1.25, 1.25)
color = Color(1, 0, 0, 0.79271)
energy = 8.0
shadow_enabled = true
shadow_filter = 1
texture = ExtResource("3_r2alx")

[node name="LensFlareSprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.392157, 0.392157, 1)
self_modulate = Color(1, 0.588235, 0.588235, 0.686275)
position = Vector2(13, 0)
texture = ExtResource("4_mepvj")

[node name="SmokeParticles" type="GPUParticles2D" parent="."]
position = Vector2(14, 0)
emitting = false
process_material = SubResource("ParticleProcessMaterial_2bbo8")
texture = ExtResource("5_k7hp4")
lifetime = 2.0

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="SmokingTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="BlackSmogSprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0)
z_index = 60
position = Vector2(14, 0)
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_r2alx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "light_flicker"
libraries = {
"": SubResource("AnimationLibrary_qeov5")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="SmokingTimer" to="." method="_on_smoking_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
